--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -107,6 +107,8 @@
     </div>
     <div class="clearfix"></div>
 </div>
+
+{% block content %}
 <!---->
 <div class="slider">
     <div class="callbacks_container">
@@ -279,6 +281,7 @@
         </div>
     </div>
 </div>
+{% endblock %}
 <div class="copywrite">
     <div class="container">
         <div class="copy">
