--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -54,7 +54,7 @@
         <!---->
         <div class="top-nav">
             <ul class="memenu skyblue">
-                <li class="active"><a href="index.html">Início</a></li>
+                <li class="active"><a href="{% url 'core:index' %}">Início</a></li>
                 <li class="grid"><a href="{% url 'artisans:list_artisan_users' %}">Artesões</a></li>
                 <!--
                     <div class="mepanel">
@@ -109,71 +109,110 @@
 </div>
 
 {% block content %}
-<!---->
-<div class="slider">
-    <div class="callbacks_container">
-        <ul class="rslides" id="slider">
-            <li>
-                <div class="banner1">
-                    <div class="banner-info">
-                        <h3>Cultura da Região</h3>
-                        <p></p>
-                        <br><br>
-                        <div class="col-md-6 col-md-offset-3">
-                            <button type="button" class="btn btn-info btn-lg"><i
-                                    class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
-                            </button>
+    <!---->
+    <div class="slider">
+        <div class="callbacks_container">
+            <ul class="rslides" id="slider">
+                <li>
+                    <div class="banner1">
+                        <div class="banner-info">
+                            <h3>Cultura da Região</h3>
+                            <p></p>
+                            <br><br>
+                            <div class="col-md-6 col-md-offset-3">
+                                <button type="button" class="btn btn-info btn-lg"><i
+                                        class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="banner2">
-                    <div class="banner-info">
-                        <h3>Arte da Região</h3>
-                        <p></p>
-                        <br><br>
-                        <div class="col-md-6 col-md-offset-3">
-                            <button type="button" class="btn btn-info btn-lg"><i
-                                    class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
-                            </button>
+                </li>
+                <li>
+                    <div class="banner2">
+                        <div class="banner-info">
+                            <h3>Arte da Região</h3>
+                            <p></p>
+                            <br><br>
+                            <div class="col-md-6 col-md-offset-3">
+                                <button type="button" class="btn btn-info btn-lg"><i
+                                        class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="banner3">
-                    <div class="banner-info">
-                        <h3>Artesão da Região</h3>
-                        <p></p>
-                        <br><br>
-                        <div class="col-md-6 col-md-offset-3">
-                            <button type="button" class="btn btn-info btn-lg"><i
-                                    class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
-                            </button>
+                </li>
+                <li>
+                    <div class="banner3">
+                        <div class="banner-info">
+                            <h3>Artesão da Região</h3>
+                            <p></p>
+                            <br><br>
+                            <div class="col-md-6 col-md-offset-3">
+                                <button type="button" class="btn btn-info btn-lg"><i
+                                        class="glyphicon glyphicon-th-list"></i> Ir para o Catálogo
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-</div>
-<!---->
-<script src="js/bootstrap.js"></script>
-
-<div class="items">
-    <div class="offers">
-        <div class="container">
-            <h3>Novos Artesanatos</h3>
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="container">
-        <div class="items-sec">
-            {% for artifact in artifacts %}
+    <!---->
+    <script src="js/bootstrap.js"></script>
+
+    <div class="items">
+        <div class="offers">
+            <div class="container">
+                <h3>Novos Artesanatos</h3>
+            </div>
+        </div>
+
+
+        <div class="container">
+            <div class="col-md-9">
+
+
+                {% for artifact in artifacts %}
+                    <a href="{% url 'artifacts:show_artifact_user' artifact.pk %}"><div class="product-grid">
+                        <div class="more-product"><span> </span></div>
+                        <div class="product-img b-link-stripe b-animate-go  thickbox">
+                            <img src="{{ artifact.photo }}" class="img-responsive" alt="">
+                            <div class="b-wrapper">
+                                <h4 class="b-animate b-from-left  b-delay03">
+                                    <button><span class="fa fa-file-text-o" aria-hidden="true"></span> Ver mais</button>
+                                </h4>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="product-info simpleCart_shelfItem">
+                        <div class="product-info-cust prt_name">
+                            <h4>{{ artifact.name }}</h4>
+                            <div class="clearfix"> </div>
+                        </div>
+
+                    </div>
+                    </div>
+                {% endfor %}
+
+        </div>
+
+    </div>
+    </div>
+    <!--
+
+    <div class="items">
+        <div class="offers">
+            <div class="container">
+                <h3>Artesanatos Em Alta</h3>
+            </div>
+        </div>
+        <div class="container">
+            <div class="items-sec">
                 <div class="col-md-3 feature-grid">
-                    <a href="product.html"><img src="{{ artifact.photo }}" alt=""/>
+                    <a href="product.html"><img src="images/img1.jpg" alt=""/>
                         <div class="arrival-info">
-                            <p>{{ artifact.name }}</p>
+                            <p>Art 2</p>
                         </div>
                         <div class="viw">
                             <a href="product.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Ver
@@ -181,106 +220,79 @@
                         </div>
                     </a>
                 </div>
-            {% endfor %}
 
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
-<!--
-
-<div class="items">
-    <div class="offers">
-        <div class="container">
-            <h3>Artesanatos Em Alta</h3>
-        </div>
-    </div>
-    <div class="container">
-        <div class="items-sec">
-            <div class="col-md-3 feature-grid">
-                <a href="product.html"><img src="images/img1.jpg" alt=""/>
-                    <div class="arrival-info">
-                        <p>Art 2</p>
-                    </div>
-                    <div class="viw">
-                        <a href="product.html"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Ver
-                            mais</a>
-                    </div>
-                </a>
-            </div>
-
-            <div class="clearfix"></div>
-        </div>
-    </div>
-</div>
--->
-<div class="offers">
-    <div class="container">
-        <h3>Registros</h3>
-        <div class="offer-grids">
-            <div class="col-md-6 grid-left">
-                <div class="offer-grid1 text-center">
-                    <div class="text-center">
-                        <h4>Número de Artesãos</h4>
-                        <p>{{ artisans_count }}</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 grid-right">
-                <div class="offer-grid1">
-                    <div class="text-center">
-                        <h4>Número de Artesanatos</h4>
-                        <p>{{ artifacts_count }}</p>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-                <a href="#redirecionar-para-tela-de-mais-artesanatos" data-toggle="tooltip" data-placement="top"
-                   title="Veja a lista de artesãos clicando aqui"></a>
                 <div class="clearfix"></div>
             </div>
-            <a href="#" data-toggle="tooltip" data-placement="top" title="Veja a lista de artesanatos clicando aqui">
-                <div class="offer-grid2">
-            </a>
         </div>
-        <div class="clearfix"></div>
     </div>
-</div>
-</div>
-<!---->
-<div class="subscribe">
-    <div class="container">
-        <h3>Receber Novidades por e-mail</h3>
-        <form>
-            <input type="text" class="text" value="Email" onfocus="this.value = '';"
-                   onblur="if (this.value == '') {this.value = 'Email';}">
-            <input type="submit" value="Subscribe">
-        </form>
-    </div>
-</div>
-<!---->
-<div class="footer">
-    <div class="container">
-        <div class="footer-grids">
-            <div class="col-md-4 about-us">
-                <h3>Sobre </h3>
-                <p></p>
-            </div>
-            <div class="col-md-4 ftr-grid">
-                <h3>Informações</h3>
-                <ul class="nav-bottom">
-                    <li><a href="#">Track Order</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4 ftr-grid">
-                <h3>Categorias</h3>
-                <ul class="nav-bottom">
-                    <li><a href="#">Car Lights</a></li>
-                </ul>
+    -->
+    <div class="offers">
+        <div class="container">
+            <h3>Registros</h3>
+            <div class="offer-grids">
+                <div class="col-md-6 grid-left">
+                    <div class="offer-grid1 text-center">
+                        <div class="text-center">
+                            <h4>Número de Artesãos</h4>
+                            <p>{{ artisans_count }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 grid-right">
+                    <div class="offer-grid1">
+                        <div class="text-center">
+                            <h4>Número de Artesanatos</h4>
+                            <p>{{ artifacts_count }}</p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <a href="#redirecionar-para-tela-de-mais-artesanatos" data-toggle="tooltip" data-placement="top"
+                       title="Veja a lista de artesãos clicando aqui"></a>
+                    <div class="clearfix"></div>
+                </div>
+                <a href="#" data-toggle="tooltip" data-placement="top" title="Veja a lista de artesanatos clicando aqui">
+                    <div class="offer-grid2">
+                </a>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
-</div>
+    </div>
+    <!---->
+    <div class="subscribe">
+        <div class="container">
+            <h3>Receber Novidades por e-mail</h3>
+            <form>
+                <input type="text" class="text" value="Email" onfocus="this.value = '';"
+                       onblur="if (this.value == '') {this.value = 'Email';}">
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
+    </div>
+    <!---->
+    <div class="footer">
+        <div class="container">
+            <div class="footer-grids">
+                <div class="col-md-4 about-us">
+                    <h3>Sobre </h3>
+                    <p></p>
+                </div>
+                <div class="col-md-4 ftr-grid">
+                    <h3>Informações</h3>
+                    <ul class="nav-bottom">
+                        <li><a href="#">Track Order</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 ftr-grid">
+                    <h3>Categorias</h3>
+                    <ul class="nav-bottom">
+                        <li><a href="#">Car Lights</a></li>
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 <div class="copywrite">
     <div class="container">
