--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load widget_tweaks %}
+
 {% block content %}
     <div class="product">
         <div class="container">
@@ -11,12 +13,13 @@
                         <div class="flexslider">
                             <ul class="slides">
                                 <li data-thumb="{{ artifact.photo }}" style="list-style: none">
-                                    <div class="thumb-image"> <img src="{{ artifact.photo }}" data-imagezoom="true" class="img-responsive" alt=""/> </div>
+                                    <div class="thumb-image"><img src="{{ artifact.photo }}" data-imagezoom="true"
+                                                                  class="img-responsive" alt=""/></div>
                                 </li>
                             </ul>
                         </div>
                         <script src="{% static 'js/imagezoom.js' %}"></script>
-                        <script defer src="{% static 'js/jquery.flexslider.js'  %}"></script>
+                        <script defer src="{% static 'js/jquery.flexslider.js' %}"></script>
 
                     </div>
                     <div class="col-md-5 single-top-in simpleCart_shelfItem">
@@ -33,11 +36,12 @@
                                 </ul>
                             </div>
                             <div class="check">
-                                <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Cadastrado em: {{ artifact.created }}</p>
+                                <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Cadastrado
+                                    em: {{ artifact.created }}</p>
                             </div>
                         </div>
                     </div>
-                    <div class="clearfix"> </div>
+                    <div class="clearfix"></div>
                 </div>
             </div>
             <div class="product-price1">
@@ -60,32 +64,49 @@
                             </ul>
                         </div>
                         <div class="check">
-                            <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Cadastrado em: {{ artifact.artisan.created }}</p>
+                            <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Cadastrado
+                                em: {{ artifact.artisan.created }}</p>
                         </div>
+                    </div>
+
+                    <div>
+                        {% for comment in comments %}
+                            {{ comment.name }}
+                            {{ comment.comment }}
+                        {% endfor %}
+
                     </div>
 
                     <!-- COMMENTS -->
                     <form class="form-horizontal" method="POST">
+                        {% csrf_token %}
+
+                        {% for field in form_comment %}
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label" for="{{ field.auto_id }}">{{ field.label }}</label>
+                                <div class="col-sm-10">
+                                    {% render_field field class="form-control" %}
+                                </div>
+                            </div>
+                        {% endfor %}
+
+
+
+
                         <div class="form-group">
-                            <label class="col-sm-2 control-label" for="">Nome</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" placeholder="Text input">
+                                <input type="submit" value="Enviar Comentário">
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label" for="">Comentário</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" rows="3"></textarea>
-                            </div>
-                        </div>
                     </form>
 
                 </div>
 
                 <div class="col-md-5 pull-right">
                     <a href="#">
-                        <img src="{{ artifact.artisan.photo }}" alt="Usuário" class="img-responsive thumbnail" style="margin: 0 auto;">
+                        <img src="{{ artifact.artisan.photo }}" alt="Usuário" class="img-responsive thumbnail"
+                             style="margin: 0 auto;">
                     </a>
                 </div>
             </div>
@@ -94,32 +115,34 @@
 
         <div class="container">
             <div class="bottom-prdt">
-                <h4>Artesanatos Relacionados</h4><div class="clearfix"></div>
+                <h4>Artesanatos Relacionados</h4>
+                <div class="clearfix"></div>
 
                 <div class="btm-grid-sec">
 
                     {% for related_artifact in related_artifacts %}
-                        <a href="{% url 'artifacts:show_artifact_user' related_artifact.pk %}"><div class="product-grid">
-                            <div class="more-product"><span> </span></div>
-                            <div class="product-img b-link-stripe b-animate-go  thickbox">
-                                <img src="{{ related_artifact.photo }}" class="img-responsive" alt="">
-                                <div class="b-wrapper">
-                                    <h4 class="b-animate b-from-left  b-delay03">
-                                        <button><span class="fa fa-file-text-o" aria-hidden="true"></span> Ver mais</button>
-                                    </h4>
+                        <a href="{% url 'artifacts:show_artifact_user' related_artifact.pk %}">
+                            <div class="product-grid">
+                                <div class="more-product"><span> </span></div>
+                                <div class="product-img b-link-stripe b-animate-go  thickbox">
+                                    <img src="{{ related_artifact.photo }}" class="img-responsive" alt="">
+                                    <div class="b-wrapper">
+                                        <h4 class="b-animate b-from-left  b-delay03">
+                                            <button><span class="fa fa-file-text-o" aria-hidden="true"></span> Ver mais
+                                            </button>
+                                        </h4>
+                                    </div>
                                 </div>
-                            </div>
                         </a>
                         <div class="product-info simpleCart_shelfItem">
                             <div class="product-info-cust prt_name">
                                 <h4>{{ related_artifact.name }}</h4>
-                                <div class="clearfix"> </div>
+                                <div class="clearfix"></div>
                             </div>
 
                         </div>
                         </div>
                     {% endfor %}
-
 
 
                 <div class="clearfix"></div>
