--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -73,6 +73,7 @@
                         {% for comment in comments %}
                             {{ comment.name }}
                             {{ comment.comment }}
+                            à {{ comment.created|timesince }}
                         {% endfor %}
 
                     </div>
