Added field search

--- a/artisans/templates/list_artisan_for_user.html
+++ b/artisans/templates/list_artisan_for_user.html
@@ -38,20 +38,14 @@
         <div class="rsidebar span_1_of_left">
             <section  class="sky-form">
                 <div class="product_right">
-                    <h4 class="m_2"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span>Categorias</h4>
-                    <div class="tab1">
-                        <ul class="place">
-                            <li class="sort">Madeira</li>
-                            <li class="by"><img src="images/do.png" alt=""></li>
-                            <div class="clearfix"> </div>
-                        </ul>
-                        <div class="single-bottom">
-                            <a href="#"><p>Lanterns</p></a>
-                            <a href="#"><p>Wall Lamps</p></a>
-                            <a href="#"><p>Table Lamps</p></a>
-                            <a href="#"><p>Selling Lamps</p></a>
+                    <form action="?search=" method="GET">
+                        <div class="input-group">
+                            <input type="text" name="search" class="form-control" placeholder="Artesao">
+                            <span class="input-group-btn">
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Pesquisar</button>
+                      </span>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </section>
         </div>
