--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -64,13 +64,13 @@
                                 <div class="media">
                                     <div class="media-left">
                                         <div class="avatar avatar-xs avatar-circle">
-                                            <img src="assets/images/221.jpg" alt="">
+                                            <img src="{{user.photo}}" alt="">
                                             <i class="status status-online"></i>
                                         </div>
                                     </div>
                                     <div class="media-body">
-                                        <h5 class="media-heading">John Doe</h5>
-                                        <small class="media-meta">Active now</small>
+                                        <h5 class="media-heading">{{user.name}}</h5>
+                                        <small class="media-meta">Online</small>
                                     </div>
                                 </div>
                             </a><!-- .media-group-item -->
